<?xml version="1.0"?>
<package>
  <name>deformable_astar</name>
  <version>0.0.1</version>
  <description>The deformable_astar package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xtf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>sdf_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xtf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>sdf_tools</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
